Completed Module 11 update

--- a/Starter_Code/part_2_mars_weather.ipynb
+++ b/Starter_Code/part_2_mars_weather.ipynb
@@ -1601,17 +1601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write the data to a CSV\n",
-    "df"
+    "df.to_csv('Mars_Data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
